# misis

./: .env.example  .gitignore  README.md  database.db  habit_tracker.db  main.py  pyproject.toml  requirements.txt  zapiska.md
ai/: agent.py
bot/: handlers.py
config/: settings.py
database/: manager.py
models/: habit.py  user.py
