[tool.poetry]
name = "habit_tracker"
version = "0.1.0"
description = "Telegram habit tracker bot with simple AI recommendations"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0"
python-dotenv = "^1.0"
openai = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"